# event-schema-contracts

./: .gitignore  README.md  pyproject.toml
docs/: compatibility-policy.md  event-lifecycle.md  schema-versioning.md
event_schema_contracts/base/: base_event.py  domain.py  identity.py  metadata.py  time.py  trace.py  versioning.py
event_schema_contracts/features/: feature_vector.py
event_schema_contracts/telemetry/: device_event.py  network_event.py  session_event.py
event_schema_contracts/versioning/: compatibility.py  schema_registry.py
tests/: conftest.py  test_base_event.py  test_device_registration_payload.py  test_schema_registry.py
tests/base/: test_base_event.py
tests/telemetry/: test_network_event.py  test_session_event.py
