[project]
name = "event-schema-contracts"
version = "0.1.0"
description = "Canonical telemetry event schema contracts for ingestion pipelines"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"